Bug fixes for work on mobile devices
Fixed some issues with navigation arising out of work on mobiles. These indicate further work needed on encapsulation and separation of concerns.

--- a/directories.css
+++ b/directories.css
@@ -13,7 +13,6 @@ body {
     position: absolute;
     top:0;
     width: 100%;
-    height: 70px;
 }
 #pagefooter {
     /* Provide scrollbars if needed and fix the header dimensions */
@@ -29,7 +28,6 @@ body {
     position: absolute;
     width: 100%;
     height: calc( 100% - 135px );
-    top: 70px;
 }
 #mainpic {
     /* Provide scrollbars if needed, position below header, and derive height from top/bottom */
